--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/style.css">
     <title>Document</title>
 </head>
 <body>
@@ -38,12 +39,12 @@
         </section>
         <article class="cartao">
         <div class="cartao__conteudo">
-                <h3>Programação</h3>
+                <h3>história</h3>
                 <div class="cartao__conteudo__pergunta">
-                        O que é CSS?
+                        Quanto tempo durou a guerra dos 100 anos?
                 </div>
                 <div class="cartao__conteudo__resposta">
-                        O CSS é uma linguagem de estilização
+                        Ela durous exatos 106 anos
                 </div>
         </div>
 </article>
